--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1>ARTEMIS INSTITUTE</h1>
 <p>EMPOWERING THE WORKFORCE OF THE FUTURE</p>
+<img src="https://github.com/CZavos/images/blob/main/Gram%20Henry%20Zavos%20-%20Currium.JPG?raw=true" alt="G and Currium" width="215" height="140">
 </body>
 </html>
