--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ARTEMIS INSTITUTE</title> /* This will place a title into the tab at the top of the page */
+<title>ARTEMIS INSTITUTE</title>
 </head>
 <body>
 <h1>ARTEMIS INSTITUTE</h1>
