--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
     Age: 25
     Location: Kansas City
     </pre>
+<a href = “test.html” style = “color:black”; target = “_blank”;>
+<button>New Page Link</button></a>
 </header>
 <section class="about">
     <p>Check out my favorite website: 
