--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     Age: 25
     Location: Kansas City
     </pre>
-<a href = “test.html” style = “color:black”; target = “_blank”;>
+<a href = "test.html" style = "color:black"; target = "_blank";>
 <button>New Page Link</button></a>
 </header>
 <section class="about">
