--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 </header>
 <section class="about">
     <p>Check out my favorite website: 
-        <a href="https://www.openai.com" target="_blank">OpenAI</a>
+        <a href="https://www.npr.org/" target="_blank">National Public Radio</a>
     </p>
 <a href="czavos@mokangoodwill.org" target="_blank">czavos@mokangoodwill.org</a>
     <a href="https://www.openai.com" target="_blank">
