--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <a href="https://www.npr.org/" target="_blank">National Public Radio</a>
     </p>
 <a href="czavos@mokangoodwill.org" target="_blank">czavos@mokangoodwill.org</a>
-    <a href="https://www.openai.com" target="_blank">
+    <a href="https://www.flickr.com/photos/gramzavos/" target="_blank">
         <img src="https://live.staticflickr.com/839/43622975051_18e3e4dee2.jpg" alt="Sample Image" title = "Dad and Gram - 2019">
     </a>
 </section>
