--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <section class = "video">
     <h2>My Favorite Video</h2>
     <video width="480" height="360" controls>
-        <source src="https://live.staticflickr.com/video/48258241016/031646f929/360p.mp4?s=eyJpIjo0ODI1ODI0MTAxNiwiZSI6MTc0MjkyNzM2NiwicyI6Ijk2OTAyYjE4ZGUzNjhjMmE3Zjg3Mjc2Y2E1ZDNiYjhjOGIwNjk2ZDMiLCJ2IjoxfQ">
+        <source src="https://github.com/CZavos/images/blob/main/Gram%20Christmas.mp4">
         Your browser does not support the video tag.
     </video>
 </section>
