--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <section class = "video">
     <h2>My Favorite Video</h2>
     <video width="480" height="360" controls>
-        <source src="https://github.com/CZavos/images/blob/main/Gram%20Christmas.mp4">
+        <source src="https://github.com/CZavos/images/blob/main/Gram%20Christmas.mp4?raw=true">
         Your browser does not support the video tag.
     </video>
 </section>
