--- a/index.html
+++ b/index.html
@@ -1,44 +1,46 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>My Personal Webpage</title>
-    <style>
-        body {
+<style>
+ body {
             background-color: powderblue;
             font-family: Arial;
-            color: gray;
+            color: black;
             text-align: center;
         }
-	header {
+
+header {
     		background-color: tomato;
     		color: white;
     		text-align: center;
     		padding: 20px;
 	}
-
-        h1 {
+        
+h1 {
             color: navy;
             font-size: 36px;
         }
 
-        p {
+        
+p {
             font-size: 18px;
         }
-
-	img {
+	
+img {
     		width: 200px;
+		height: 125px;
     		border-radius: 50%;
     		border: 3px solid green;
     		margin-top: 10px;
 	}
-
         .table-style1 {
             width: 80%;
             margin: 20px auto;
             border: 2px solid navy;
         }
-
         .table-style1 th, .table-style1 td {
             border: 1px solid navy;
             padding: 10px;
@@ -52,7 +54,7 @@
         .table-style2 {
             width: 60%;
             margin: 20px auto;
-            border-collapse: collapse;
+            border-collapse: collapse; /*makes the borders of adjacent table cells collapse into a single border*/
             border: 2px solid darkgreen;
         }
 
@@ -65,30 +67,26 @@
         .table-style2 th {
             background-color: lightgreen;
         }
-
        .about		{
     		width: 60%;
     		margin: 20px auto;
     		text-align: left;
 	}
 
-	div.mycontainer {
+div.mycontainer {
   		width:66%;
-  		overflow:auto;
-	
+  		overflow:auto; /*browser will add scrollbars only when necessary*/
 	}
 	div.mycontainer div {
   		width:50%;  
-  		float:left;
+  		float:left; /*makes an element float to the left side of its container*/
 	}
-
-	.video		{
+.video		{
 		width: 35%;
     		margin: 10px auto;
     		text-align: center;
 		border: 3px solid green;
 	}
-
         .list-style1 {
             list-style-type: square;
             color: darkblue;
@@ -100,37 +98,78 @@
             list-style-type: circle;
             color: darkgreen;
             text-align: left;
-	    margin:20px
+	    margin:20px;
         }
+.button-transition {
+    background-color: navy;
+    color: white;
+    padding: 10px 20px;
+    transition: background-color 0.3s ease;
+    border: none;
+    cursor: pointer;
+}
 
-    </style>
+.button-transition:hover {
+    background-color: darkorange;
+}
+.flex-container {
+    display: flex;
+    justify-content: space-around;
+    background-color: lightgray;
+    padding: 20px;
+}
+.flex-item {
+    background-color: steelblue;
+    color: white;
+    padding: 20px;
+    width: 30%;
+    text-align: center;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    background-color: #f8f8f8;
+    padding: 10px;
+}
+.grid-item {
+    background-color: #4CAF50;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+</style>
 </head>
 <body>
-
 <header>
     <h1>Welcome to My Personal Webpage</h1>
-
     <p>This is a simple example of an HTML and CSS personal webpage.</p>
-
-    <pre style = "font-size: 16px";>
+    <pre>
     Name: John Doe
     Age: 25
     Location: Kansas City
     </pre>
-<a href = "test.html" style = "color:black"; target = "_blank";>
-<button>New Page Link</button></a>
+<a href = “test.html” style = “color:black”; target = “_blank”;>
+<button class = "button-transition">New Page Link</button></a>
+
 </header>
 <section class="about">
-    <p>Check out my favorite website: 
-        <a href="https://www.npr.org/" target="_blank">National Public Radio</a>
-    </p>
-<a href="czavos@mokangoodwill.org" target="_blank">czavos@mokangoodwill.org</a>
-    <a href="https://www.flickr.com/photos/gramzavos/" target="_blank">
-        <img src="https://live.staticflickr.com/839/43622975051_18e3e4dee2.jpg" alt="Sample Image" title = "Dad and Gram - 2019">
-    </a>
-</section>
-    <hr>
 
+    <p>Check out my favorite website:
+
+<a href="https://www.npr.org/" target="_blank">National Public Radio</a>
+
+    </p>
+
+<a href="czavos@mokangoodwill.org" target="_blank">czavos@mokangoodwill.org</a>
+
+    <a href="https://www.flickr.com/photos/gramzavos/53928767183/in/dateposted/" target="_blank">
+
+        <img src="https://github.com/CZavos/images/blob/main/Gram%20-%20Xmas.jpg?raw=true" alt="Sample Image" title = "Click to see more Gram"></a>
+
+</section>
+<hr>
     <h2>My Hobbies</h2>
     <table class="table-style1">
         <tr>
@@ -138,31 +177,29 @@
             <th>Hours/Week</th>
         </tr>
         <tr>
-            <td>Reading</td>
-            <td>5</td>
+            <td>1st hobby</td>
+            <td>time</td>
         </tr>
         <tr>
-            <td>Coding</td>
-            <td>10</td>
+            <td>2nd hobby</td>
+            <td>time</td>
         </tr>
     </table>
-
-    <h2>My Favorite Movies</h2>
+ <h2>My Favorite Movies</h2>
     <table class="table-style2">
         <tr>
             <th>Movie</th>
             <th>Year</th>
         </tr>
         <tr>
-            <td>Inception</td>
-            <td>2010</td>
+            <td>1st Movie</td>
+            <td>Movie Year</td>
         </tr>
         <tr>
-            <td>Interstellar</td>
-            <td>2014</td>
+            <td>2nd Movie</td>
+            <td>Movie Year</td>
         </tr>
     </table>
-
 <div class = "mycontainer">
 <div>
     <h2>My Favorite Foods</h2>
@@ -190,6 +227,31 @@
 </section>
     <h2>Embedded Website</h2>
     <iframe src="https://www.npr.org" width="600" height="400" style="border: none;"></iframe>
-
+<center><h2>Classes are held <em>Monday through Thursday</em> <del>Friday</del> from <mark>9:00am to 12:00 pm</mark> at our Goodwill AI Learning Lab located at 800 E. 18<sup>th</sup> St. <ins>Kansas City, MO</ins> 64108.  As of today, <sup>1</sup>/<sub>6</sub> of classes are completed.</h2></center>
+<form style="margin-top: 30px;">
+    <label for="email">Enter your email:</label>
+    <input type="email" id="email" name="email" placeholder="you@example.com" required>
+    <br><br>
+    <label for="bio">Tell us about yourself:</label><br>
+    <textarea id="bio" name="bio" rows="4" cols="40"></textarea>
+    <br><br>
+    <input type="submit" value="Submit">
+</form>
+<br>
+<div class="flex-container">
+    <div class="flex-item">Item 1</div>
+    <div class="flex-item">Item 2</div>
+    <div class="flex-item">Item 3</div>
+</div>
+<br>
+<div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>
+</div>
 </body>
+
 </html>
