--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -150,7 +148,7 @@ div.mycontainer {
     Age: 25
     Location: Kansas City
     </pre>
-<a href = “test.html” style = “color:black”; target = “_blank”;>
+<a href = "test.html" style = "color:black"; target = "_blank";>
 <button class = "button-transition">New Page Link</button></a>
 
 </header>
