--- a/index.html
+++ b/index.html
@@ -159,17 +159,17 @@ div.mycontainer {
 <div class="grid-container">
     <div class="grid-item"><a href = "test.html" style = "color:black"; target = "_blank";>
 <button class = "button-transition">New Page Link1</button></a></div>
-    <div class="grid-item"><a href = “test.html” style = “color:black”; target = “_blank”;>
+    <div class="grid-item"><a href = "test2.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">New Page Link2</button></a></div>
-    <div class="grid-item"><a href = “test.html” style = “color:black”; target = “_blank”;>
+    <div class="grid-item"><a href = "test3.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">New Page Link3</button></a></div>
-    <div class="grid-item"><a href = “test.html” style = “color:black”; target = “_blank”;>
+    <div class="grid-item"><a href = "test4.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">New Page Link4</button></a></div>
-    <div class="grid-item"><a href = “test.html” style = “color:black”; target = “_blank”;>
+    <div class="grid-item"><a href = "test5.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">New Page Link5</button></a></div>
 <div class="grid-item"></div>
 <div class="grid-item"></div>
-    <div class="grid-item"><a href = “test.html” style = “color:black”; target = “_blank”;>
+    <div class="grid-item"><a href = "test6.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">New Page Link6</button></a></div>
 </div>
 </div>
