--- a/index.html
+++ b/index.html
@@ -278,7 +278,10 @@ div.mycontainer {
   <input type="submit" value="Login">
 </form>
 <br><br><br>
-
+<video width="480" height="360" controls>
+        <source src="https://github.com/Ductapus/MusicPage/blob/main/Cat%20Video.mp3?raw=true">
+        Your browser does not support the video tag.
+    </video>
 
 </body>
 
