--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ div.mycontainer {
 <div class = "video">
     <h2>My Favorite Video</h2>
     <video width="480" height="360" controls>
-        <source src="https://github.com/CZavos/images/blob/main/Gram%20Christmas.mp4?raw=true">
+        <source src="https://github.com/CZavos/images/blob/main/Gram%20Christmas.mp4?raw=True">
         Your browser does not support the video tag.
     </video>
 </div>
