Remove video iframe from index.html

--- a/index.html
+++ b/index.html
@@ -282,7 +282,6 @@ div.mycontainer {
         <source src="https://github.com/Ductapus/MusicPage/blob/main/Cat%20Video.mp3?raw=true">
         Your browser does not support the video tag.
     </video>
-
+<iframe width="656" height="480" src="https://www.youtube.com/embed/h_qgrG_ZxEY?list=RDh_qgrG_ZxEY" title="The Who - Happy Jack - LIVE (1967)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
-
 </html>
