Update link in grid-item to adventure.html

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ div.mycontainer {
     Location: Kansas City
     </pre>
 <div class="grid-container">
-    <div class="grid-item"><a href = "test.html" style = "color:black"; target = "_blank";>
+    <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button class = "button-transition">New Page Link1</button></a></div>
     <div class="grid-item"><a href = "test2.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">New Page Link2</button></a></div>
