--- a/index.html
+++ b/index.html
@@ -285,9 +285,8 @@ div.mycontainer {
 	<br>
 	<hr>
 <iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who, Michael Lindsay-Hogg - A Quick One (While He&#39;s Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<script defer src="https://pyscript.net/latest/pyscript.js"></script>
-	<py-script src = "choose.py">
-</py-script>
+<hr>
+<iframe src="" width="800" height="600"></iframe>
 
 </body>
 </html>
