--- a/adventure.html
+++ b/adventure.html
@@ -4,26 +4,27 @@
   <title>Adventure Game</title>
 </head>
 <body>
+<h1>Adventure Game</h1>
+
 <script>
-// Utility sleep function
+// Sleep function
 function wait(ms) {
     return new Promise(resolve => setTimeout(resolve, ms));
 }
 
-// Function to greet the user
+// Greeting
 async function greet() {
     alert("Hello, adventurer! Welcome to the land of JavaScript.");
     await wait(1000);
-
     let name = prompt("What is your name?");
     alert(`Nice to meet you, ${name}!`);
     await wait(1000);
     return name;
 }
 
-// Function for the adventure choice
+// Choose Path
 async function choosePath() {
-    alert("You find yourself at a crossroads.\nWhere will you go?\n1. Enter the dark forest.\n2. Walk along the beach.");
+    alert("You find yourself at a crossroads.\n1. Enter the dark forest.\n2. Walk along the beach.");
     let choice = prompt("Enter 1 or 2:");
     await wait(1000);
 
@@ -33,15 +34,13 @@ async function choosePath() {
         await beachPath();
     } else {
         alert("That's not a valid option!");
-        await wait(1000);
         await home();
     }
 }
 
 async function home() {
-    alert("You arrive home safely, but you still want to do something.\nYou decide to go through all of this all over again.");
+    alert("You arrive home safely, but still want to do something.");
     alert("1. Enter the dark forest.\n2. Walk along the beach.");
-
     let choice2 = prompt("Enter 1 or 2:");
 
     if (choice2 === "1") {
@@ -50,12 +49,11 @@ async function home() {
         await beachPath();
     } else {
         alert("That's not a valid option!");
-        await wait(1000);
         await home();
     }
 }
 
-// Forest path
+// Forest Path
 async function forestPath() {
     alert("You enter the dark forest. It's spooky and quiet.");
     await wait(2000);
@@ -63,7 +61,7 @@ async function forestPath() {
     alert("Suddenly, you hear a noise behind you!");
     await wait(2000);
 
-    let action = prompt("Do you want to run or stay and see what it is?\nType 'run' or 'stay':");
+    let action = prompt("Do you want to run or stay?\nType 'run' or 'stay':");
 
     if (action === "run") {
         let outcomes = [
@@ -75,8 +73,8 @@ async function forestPath() {
         let outcome = outcomes[Math.floor(Math.random() * outcomes.length)];
         alert(outcome);
 
-        if (outcome === "You run as fast as you can, but you don’t see the giant hole, and you fall in.") {
-            alert("You are unharmed from the fall. You yell out for help, but no one comes.");
+        if (outcome.includes("giant hole")) {
+            alert("You are unharmed, but no one comes to help.");
         } else {
             alert("You make your way back home and have a cup of tea.");
         }
@@ -84,42 +82,36 @@ async function forestPath() {
     } else if (action === "stay") {
         let encounters = [
             "A friendly rabbit appears! It guides you out safely.",
-            "A shadowy figure appears... but it turns out to be just a deer."
+            "A shadowy figure appears... but it's just a deer."
         ];
 
-        let encounter = encounters[Math.floor(Math.random() * encounters.length)];
-        alert(encounter);
-
+        alert(encounters[Math.floor(Math.random() * encounters.length)]);
     } else {
-        alert("That's not a valid action, but nothing happens. You walk back safely.");
+        alert("Invalid action, but nothing happens. You walk back safely.");
     }
 }
 
-// Beach path
+// Beach Path
 async function beachPath() {
     alert("You walk along the beach. The waves are calming.");
     await wait(2000);
 
-    let action = prompt("You see a shiny object in the sand. Do you want to pick it up?\nType 'yes' or 'no':");
+    let action = prompt("You see a shiny object. Pick it up?\nType 'yes' or 'no':");
 
     if (action === "yes") {
-        let treasure = [
-            "You pick up the shiny object and discover it's a golden coin!",
-            "It's a piece of glass, but it's smooth and pretty."
+        let treasures = [
+            "It's a golden coin!",
+            "It's a pretty piece of sea glass."
         ];
-
-        let result = treasure[Math.floor(Math.random() * treasure.length)];
-        alert(result);
-
+        alert(treasures[Math.floor(Math.random() * treasures.length)]);
     } else if (action === "no") {
-        alert("You walk past the object, but feel relaxed by the sound of the waves.");
-
+        alert("You walk past it and enjoy the waves.");
     } else {
-        alert("You hesitate, but nothing happens. You continue walking.");
+        alert("You hesitate, but nothing happens.");
     }
 }
 
-// Main program
+// Start
 async function startAdventure() {
     let name = await greet();
     alert(`${name}, your adventure begins now!`);
@@ -127,8 +119,8 @@ async function startAdventure() {
     await choosePath();
 }
 
-// Start the game automatically
 startAdventure();
+
 </script>
 </body>
 </html>
