Add script tag for game.js in index.html

--- a/index.html
+++ b/index.html
@@ -292,6 +292,6 @@ div.mycontainer {
     height="500" 
     style="border: 2px solid black; border-radius: 8px;">
 </iframe>
-
+<script src="game.js"></script>
 </body>
 </html>
