--- a/index.html
+++ b/index.html
@@ -144,6 +144,41 @@ div.mycontainer {
     padding: 20px;
     text-align: center;
 }
+#game-container {
+    width: 600px;
+    height: 500px;
+    border: 2px solid black;
+    border-radius: 8px;
+    padding: 15px;
+    background-color: #f0f0f0;
+    font-family: monospace;
+    overflow-y: auto;
+}
+
+#game-text {
+    white-space: pre-line; /* preserves line breaks */
+    height: 420px;
+    overflow-y: auto;
+    margin-bottom: 10px;
+}
+
+#game-input {
+    display: flex;
+}
+
+#user-input {
+    flex: 1;
+    padding: 5px;
+    font-size: 16px;
+}
+
+#submit-btn {
+    padding: 5px 10px;
+    margin-left: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
 
 </style>
 </head>
@@ -286,12 +321,15 @@ div.mycontainer {
 	<hr>
 <iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who, Michael Lindsay-Hogg - A Quick One (While He&#39;s Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <hr>
-<iframe 
-    src="https://github.com/CZavos/This_is_it/adventure.html" 
-    width="600" 
-    height="500" 
-    style="border: 2px solid black; border-radius: 8px;">
-</iframe>
+    <h1>Welcome to the Adventure Game</h1>
+<br>
+    <div id="game-container">
+        <div id="game-text"></div>
+        <div id="game-input">
+            <input type="text" id="user-input" placeholder="Type your choice here...">
+            <button id="submit-btn">Submit</button>
+        </div>
+    </div>
 <script src="game.js"></script>
 </body>
 </html>
