Remove '#' from IDs in index.html

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ div.mycontainer {
     padding: 20px;
     text-align: center;
 }
-#game-container {
+game-container {
     width: 600px;
     height: 500px;
     border: 2px solid black;
@@ -155,24 +155,24 @@ div.mycontainer {
     overflow-y: auto;
 }
 
-#game-text {
+game-text {
     white-space: pre-line; /* preserves line breaks */
     height: 420px;
     overflow-y: auto;
     margin-bottom: 10px;
 }
 
-#game-input {
+game-input {
     display: flex;
 }
 
-#user-input {
+user-input {
     flex: 1;
     padding: 5px;
     font-size: 16px;
 }
 
-#submit-btn {
+submit-btn {
     padding: 5px 10px;
     margin-left: 5px;
     font-size: 16px;
@@ -322,6 +322,7 @@ div.mycontainer {
 <iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who, Michael Lindsay-Hogg - A Quick One (While He&#39;s Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <hr>
     <h1>Welcome to the Adventure Game</h1>
+<hr>
 <br>
     <div id="game-container">
         <div id="game-text"></div>
