--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ div.mycontainer {
     padding: 20px;
     text-align: center;
 }
-game-container {
+.game-container {
     width: 600px;
     height: 500px;
     border: 2px solid black;
@@ -155,24 +155,24 @@ game-container {
     overflow-y: auto;
 }
 
-game-text {
+.game-text {
     white-space: pre-line; /* preserves line breaks */
     height: 420px;
     overflow-y: auto;
     margin-bottom: 10px;
 }
 
-game-input {
+.game-input {
     display: flex;
 }
 
-user-input {
+.user-input {
     flex: 1;
     padding: 5px;
     font-size: 16px;
 }
 
-submit-btn {
+.submit-btn {
     padding: 5px 10px;
     margin-left: 5px;
     font-size: 16px;
