Add iframe to embed external content

--- a/index.html
+++ b/index.html
@@ -332,5 +332,12 @@ div.mycontainer {
         </div>
     </div>
 <script src="game.js"></script>
+	<hr>
+	<iframe 
+    src="https://quirkycort.github.io/gears/public/" 
+    width="900" 
+    height="600" 
+    style="border: 2px solid #000; border-radius: 8px;">
+</iframe>
 </body>
 </html>
