Change iframe border color to red

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ div.mycontainer {
     src="https://quirkycort.github.io/gears/public/" 
     width="900" 
     height="600" 
-    style="border: 2px solid #000; border-radius: 8px;">
+    style="border: 2px solid red; border-radius: 8px;">
 </iframe>
 </body>
 </html>
