Change input placeholder from 'choice' to 'name'

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ div.mycontainer {
     <div id="game-container">
         <div id="game-text"></div>
         <div id="game-input">
-            <input type="text" id="user-input" placeholder="Type your choice here...">
+            <input type="text" id="user-input" placeholder="Type your name here...">
             <button id="submit-btn">Submit</button>
         </div>
     </div>
