Add link to new page with button in index.html

--- a/index.html
+++ b/index.html
@@ -339,5 +339,8 @@ div.mycontainer {
     height="600" 
     style="border: 2px solid red; border-radius: 8px;">
 </iframe>
+	<hr>
+	<a href = "adventure.html" style = "color:black"; target = "_blank";>
+<button class = "button-transition">New Page Link1</button></a>
 </body>
 </html>
