Fix button element in index.html

--- a/index.html
+++ b/index.html
@@ -341,6 +341,6 @@ div.mycontainer {
 </iframe>
 	<hr>
 	<a href = "adventure.html" style = "color:black"; target = "_blank";>
-<button class = "button-transition">New Page Link1</button></a>
+<button>New Page Link1</button></a>
 </body>
 </html>
