--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ div.mycontainer {
 <a href="https://www.npr.org/" target="_blank">National Public Radio</a></p></div>
   <div class="flex-item"> <a href="https://www.flickr.com/photos/gramzavos/53928767183/in/dateposted/" target="_blank">
 <img src="https://github.com/CZavos/images/blob/main/Gram%20-%20Xmas.jpg?raw=true" alt="Sample Image" title = "Click to see more Gram"></a></div>
-    <div class="flex-item"><p>Email me at the following address: <a href="czavos@mokangoodwill.org" target="_blank">czavos@mokangoodwill.org</a></p></div>
+    <div class="flex-item"><p>Email me at the following address: <a href="mailto: czavos@mokangoodwill.org" target="_blank">czavos@mokangoodwill.org</a></p></div>
 </div>
 <br><br>
 <hr>
