--- a/index.html
+++ b/index.html
@@ -191,6 +191,15 @@ div.mycontainer {
     Age: 25
     Location: Kansas City
     </pre>
+<br>
+    <div id="game-container">
+        <div id="game-text"></div>
+        <div id="game-input">
+            <input type="text" id="user-input" placeholder="Username and Password">
+            <button id="submit-btn">Submit</button>
+        </div>
+    </div>
+<script src="input.js"></script>
 <div class="grid-container">
     <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button class = "button-transition">New Page Link1</button></a></div>
