Update script reference from input.js to login.js
Replaced input.js script with login.js in index.html.

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ div.mycontainer {
             <button id="submit-btn">Submit</button>
         </div>
     </div>
-<script src="input.js"></script>
+<script src="login.js"></script>
 <div class="grid-container">
     <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button class = "button-transition">New Page Link1</button></a></div>
