Add game text area and user input elements

--- a/index.html
+++ b/index.html
@@ -193,8 +193,20 @@ div.mycontainer {
     Location: Kansas City
     </pre>
 <br>
+<hr>
+	<div id="game-text" style="
+    width: 90%;
+    height: 300px;
+    overflow-y: auto;
+    border: 1px solid black;
+    padding: 10px;
+"></div>
+
+<input id="user-input" type="text" placeholder="Type here...">
+<button id="submit-btn">Submit</button>
 
 <script src="login.js"></script>
+
 <div class="grid-container">
     <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button class = "button-transition">New Page Link1</button></a></div>
