--- a/index.html
+++ b/index.html
@@ -225,17 +225,13 @@ div.mycontainer {
     Location: Kansas City
     </pre>
 <br>
-<hr>
-	<div id="game-text2" style="
-    width: 90%;
-    height: 300px;
-    overflow-y: auto;
-    border: 1px solid black;
-    padding: 10px;
-"></div>
-
-<input id="user-input2" type="text" placeholder="Type here...">
-<button id="submit-btn2">Submit</button>
+    <div id="game-container2">
+        <div id="game-text2"></div>
+        <div id="game-input2">
+            <input type="text" id="user-input2" placeholder="Type your name here...">
+            <button id="submit-btn2">Submit</button>
+        </div>
+    </div>
 
 <script src="login.js"></script>
 
