--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ div.mycontainer {
     </video>
 </div>
     <h2>Embedded Website</h2>
-    <iframe src="https://www.npr.org" width="600" height="400" style="border: none;"></iframe>
+    <iframe src="https://quirkycort.github.io/gears/public/" width="700" height="466" style="border: none;"></iframe>
 
 <form style="margin-top: 30px;">
     <label for="email">Want to get ahold of me? Enter your email:</label>
@@ -377,13 +377,7 @@ div.mycontainer {
     </div>
 <script src="game.js"></script>
 	<hr>
-	<iframe 
-    src="https://quirkycort.github.io/gears/public/" 
-    width="900" 
-    height="600" 
-    style="border: 2px solid red; border-radius: 8px;">
-</iframe>
-	<hr>
+
 	<a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button>New Page Link1</button></a>
 </body>
