--- a/index.html
+++ b/index.html
@@ -368,16 +368,14 @@ div.mycontainer {
     <h1>Welcome to the Adventure Game</h1>
 <hr>
 <br>
-    <div id="game-container">
-        <div id="game-text"></div>
-        <div id="game-input">
-            <input type="text" id="user-input" placeholder="Type your name here...">
-            <button id="submit-btn">Submit</button>
+    <div class="game-container">
+        <div class="game-text"></div>
+        <div class="game-input">
+            <input type="text" class="user-input" placeholder="Type your name here...">
+            <button class="submit-btn">Submit</button>
         </div>
     </div>
 <script src="game.js"></script>
-	<hr>
-
 	<a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button>New Page Link1</button></a>
 </body>
