--- a/index.html
+++ b/index.html
@@ -363,10 +363,9 @@ div.mycontainer {
     </video>
 	<br>
 	<hr>
-<iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who, Michael Lindsay-Hogg - A Quick One (While He&#39;s Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who- A Quick One (While He's Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <hr>
     <h1>Welcome to the Adventure Game</h1>
-<hr>
 <br>
     <div class="game-container">
         <div class="game-text"></div>
@@ -376,6 +375,7 @@ div.mycontainer {
         </div>
     </div>
 <script src="game.js"></script>
+	<hr>
 	<a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button>New Page Link1</button></a>
 </body>
