--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+n<!DOCTYPE html>
 <html>
 <head>
     <title>My Personal Webpage</title>
@@ -147,17 +147,17 @@ div.mycontainer {
 .game-container {
     width: 600px;
     height: 500px;
-    border: 2px solid black;
+    border: 2px red;
     border-radius: 8px;
     padding: 15px;
-    background-color: #f0f0f0;
+    background-color: green;
     font-family: monospace;
     overflow-y: auto;
 }
 
 .game-text {
     white-space: pre-line; /* preserves line breaks */
-    height: 420px;
+    height: 120px;
     overflow-y: auto;
     margin-bottom: 10px;
 }
