--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@ div.mycontainer {
     text-align: center;
 }
 .game-container {
-    width: 600px;
-    height: 500px;
+    width: 400px;
+    height: 200px;
     border: 2px red;
     border-radius: 8px;
     padding: 15px;
-    background-color: green;
+    background-color: powderblue;
     font-family: monospace;
     overflow-y: auto;
 }
