Add user input section and styling to index.html
Added a new input field and button for user interaction.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-n<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>My Personal Webpage</title>
@@ -225,6 +225,19 @@ div.mycontainer {
     Location: Kansas City
     </pre>
 <br>
+<div id="game-text2" 
+	style="
+    width: 90%;
+    height: 300px;
+    overflow-y: auto;
+    border: 1px solid black;
+    padding: 10px;
+"></div>
+
+<input id="user-input2" type="text" placeholder="Username">
+<button id="submit-btn2">Submit</button>
+
+<script src="login.js"></script>
 
 
 <div class="grid-container">
