--- a/index.html
+++ b/index.html
@@ -225,7 +225,6 @@ div.mycontainer {
     Location: Kansas City
     </pre>
 <br>
-	<hr>
 <div id="game-text2" 
 	style="
     width: 90%;
@@ -233,13 +232,13 @@ div.mycontainer {
     overflow-y: auto;
     border: 1px solid black;
     padding: 10px;
-"></div>
+">
+</div>
 
 <input id="user-input2" type="text" placeholder="Username">
 <button id="submit-btn2">Submit</button>
 
 <script src="login.js"></script>
-<hr>
 
 <div class="grid-container">
     <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
