--- a/index.html
+++ b/index.html
@@ -225,10 +225,11 @@ div.mycontainer {
     Location: Kansas City
     </pre>
 <br>
+	<center>
 <div id="game-text2" 
 	style="
-    width: 90%;
-    height: 300px;
+    width: 60%;
+    height: 30px;
     overflow-y: auto;
     border: 1px solid black;
     padding: 10px;
@@ -236,7 +237,7 @@ div.mycontainer {
 </div>
 
 <input id="user-input2" type="text" placeholder="Username">
-<button id="submit-btn2">Submit</button>
+<button id="submit-btn2">Submit</button></center>
 
 <script src="login.js"></script>
 
