--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ div.mycontainer {
 <div id="game-text2" 
 	style="
     width: 60%;
-    height: 30px;
+    height: 40px;
     overflow-y: auto;
     border: 1px solid black;
     padding: 10px;
@@ -373,13 +373,19 @@ div.mycontainer {
 <hr>
     <h1>Welcome to the Adventure Game</h1>
 <br>
-    <div class="game-container">
-        <div class="game-text"></div>
-        <div class="game-input">
-            <input type="text" class="user-input" placeholder="Type your name here...">
-            <button class="submit-btn">Submit</button>
-        </div>
-    </div>
+	<center>
+<div id="game-text" 
+	style="
+    width: 60%;
+    height: 50px;
+    overflow-y: auto;
+    border: 1px solid black;
+    padding: 10px;
+">
+</div>
+
+<input id="user-input" type="text" placeholder="Username">
+<button id="submit-btn">Submit</button></center>
 <script src="game.js"></script>
 	<hr>
 	<a href = "adventure.html" style = "color:black"; target = "_blank";>
