--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ div.mycontainer {
     <h1>Welcome to the Adventure Game</h1>
 <br>
 	<center>
-<div id="game-text" 
+<div class="game-text" 
 	style="
     width: 60%;
     height: 50px;
@@ -384,8 +384,8 @@ div.mycontainer {
 ">
 </div>
 
-<input id="user-input" type="text" placeholder="Username">
-<button id="submit-btn">Submit</button></center>
+<input class="user-input" type="text" placeholder="Enter you name...">
+<button class="submit-btn">Submit</button></center>
 <script src="game.js"></script>
 	<hr>
 	<a href = "adventure.html" style = "color:black"; target = "_blank";>
