--- a/index.html
+++ b/index.html
@@ -372,20 +372,13 @@ div.mycontainer {
 <iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who- A Quick One (While He's Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <hr>
     <h1>Welcome to the Adventure Game</h1>
-<br>
-	<center>
-<div class="game-text" 
-	style="
-    width: 60%;
-    height: 50px;
-    overflow-y: auto;
-    border: 1px solid black;
-    padding: 10px;
-">
-</div>
-
-<input class="user-input" type="text" placeholder="Enter you name...">
-<button class="submit-btn">Submit</button></center>
+    <div id="game-container">
+        <div id="game-text"></div>
+        <div id="game-input">
+            <input type="text" id="user-input" placeholder="Type your name here...">
+            <button id="submit-btn">Submit</button>
+        </div>
+    </div>
 <script src="game.js"></script>
 	<hr>
 	<a href = "adventure.html" style = "color:black"; target = "_blank";>
