--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ div.mycontainer {
     border: 2px red;
     border-radius: 8px;
     padding: 15px;
-    background-color: powderblue;
+    background-color: white;
     font-family: monospace;
     overflow-y: auto;
 }
@@ -178,16 +178,7 @@ div.mycontainer {
     font-size: 16px;
     cursor: pointer;
 }
-.game-container2 {
-    width: 120px;
-    height: 40px;
-    border: 2px solid black;
-    border-radius: 8px;
-    padding: 15px;
-    background-color: #f0f0f0;
-    font-family: monospace;
-    overflow-y: auto;
-}
+
 
 .game-text2 {
     white-space: pre-line; /* preserves line breaks */
