--- a/index.html
+++ b/index.html
@@ -363,15 +363,15 @@ div.mycontainer {
 <iframe width="853" height="480" src="https://www.youtube.com/embed/RJv2-_--EY4?list=RDRJv2-_--EY4" title="The Who- A Quick One (While He's Away)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <hr>
     <h1>Welcome to the Adventure Game</h1>
-    <div id="game-container">
-        <div id="game-text"></div>
-        <div id="game-input">
-            <input type="text" id="user-input" placeholder="Type your name here...">
-            <button id="submit-btn">Submit</button>
+    <div class="game-container">
+        <div class="game-text"></div>
+        <div class="game-input">
+            <input type="text" class="user-input" placeholder="Type your name here...">
+            <button class="submit-btn">Submit</button>
         </div>
     </div>
 <script src="game.js"></script>
-	<hr>
+	<br>
 	<a href = "adventure.html" style = "color:black"; target = "_blank";>
 <button>New Page Link1</button></a>
 </body>
