--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@ div.mycontainer {
 <button id="submit-btn2">Submit</button></center>
 
 <script src="login.js"></script>
+<br>
+	<a id="main-link" href="test5.html" style="display:none;">
+    <button>Enter Main Page</button>
+</a>
 
 <div class="grid-container">
     <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
