--- a/index.html
+++ b/index.html
@@ -368,10 +368,10 @@ div.mycontainer {
     <h1>Welcome to the Adventure Game</h1>
 	<hr>
     <div class="game-container">
-        <div class="game-text"></div>
-        <div class="game-input">
-            <input type="text" class="user-input" placeholder="Type your name here...">
-            <button class="submit-btn">Submit</button>
+        <div id="game-text"></div>
+        <div id="game-input">
+            <input type="text" id="user-input" placeholder="Type your name here...">
+            <button id="submit-btn">Submit</button>
         </div>
     </div>
 <script src="game.js"></script>
