--- a/test3.html
+++ b/test3.html
@@ -144,6 +144,19 @@ Your browser does not support the video tag.
 <div class="container">
 I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. 
 </div>
+<hr>
+    <h1>Welcome to the Adventure Game</h1>
+	<hr>
+    <div class="game-container">
+        <div id="game-text"></div>
+        <div id="game-input">
+            <input type="text" id="user-input" placeholder="Type your name here...">
+            <button id="submit-btn">Submit</button>
+        </div>
+    </div>
+<script src="game.js"></script>
+	<br>
+	<hr>
 
 </body>
 </html>
