--- a/test3.html
+++ b/test3.html
@@ -3,6 +3,42 @@
 <html>
 <head>
 	<title>HTML Tutorial</title>
+<style>
+	.game-container {
+    width: 600px;
+    height: 400px;
+    border: 2px red;
+    border-radius: 8px;
+    padding: 15px;
+    font-family: monospace;
+    overflow-y: auto;
+}
+
+.game-text {
+    white-space: pre-line; /* preserves line breaks */
+    height: 120px;
+    overflow-y: auto;
+    margin-bottom: 10px;
+}
+
+.game-input {
+    display: flex;
+}
+
+.user-input {
+    flex: 1;
+    padding: 5px;
+    font-size: 16px;
+}
+
+.submit-btn {
+    padding: 5px 10px;
+    margin-left: 5px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+</style>
 </head>
 <body style= background-color:LightSkyBlue>
 
