--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ h1 {
 
 <script src="login.js"></script>
 <br>
-
+	<a id="main-link" href="test5.html" style="display:none;">
+    <button>Enter Main Page</button>
+</a>
 </body>
 </html>
