--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ h1 {
 
 <script src="login.js"></script>
 <br>
-	<a id="main-link" href="test5.html" style="display:none;">
+	<a id="main-link" href="index2.html" style="display:none;">
     <button>Enter Main Page</button>
 </a>
 </body>
