--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,7 +29,7 @@ p {
 	
 img {
     		width: 200px;
-		height: 125px;
+			height: 125px;
     		border-radius: 50%;
     		border: 3px solid green;
     		margin-top: 10px;
@@ -179,31 +178,6 @@ div.mycontainer {
     cursor: pointer;
 }
 
-
-.game-text2 {
-    white-space: pre-line; /* preserves line breaks */
-    height: 175px;
-    overflow-y: auto;
-    margin-bottom: 10px;
-}
-
-.game-input2 {
-    display: flex;
-}
-
-.user-input2 {
-    flex: 1;
-    padding: 5px;
-    font-size: 16px;
-}
-
-.submit-btn2 {
-    padding: 5px 10px;
-    margin-left: 5px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
 </style>
 </head>
 <body>
@@ -211,8 +185,8 @@ div.mycontainer {
     <h1>Welcome to My Personal Webpage</h1>
     <p>This is a simple example of an HTML and CSS personal webpage.</p>
     <pre style = "font-size: 24px";>
-    Name: John Doe
-    Age: 25
+    Name: Chuck Zavos
+    Age: 55
     Location: Kansas City
     </pre>
 <br>
@@ -227,22 +201,13 @@ div.mycontainer {
 ">
 </div>
 
-<input id="user-input2" type="text" placeholder="Username">
-<button id="submit-btn2">Submit</button></center>
-
-<script src="login.js"></script>
-<br>
-	<a id="main-link" href="test5.html" style="display:none;">
-    <button>Enter Main Page</button>
-</a>
-
 <div class="grid-container">
     <div class="grid-item"><a href = "adventure.html" style = "color:black"; target = "_blank";>
-<button class = "button-transition">New Page Link1</button></a></div>
+<button class = "button-transition">Adventure Game</button></a></div>
     <div class="grid-item"><a href = "test2.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">New Page Link2</button></a></div>
     <div class="grid-item"><a href = "test3.html" style = “color:black”; target = “_blank”;>
-<button class = "button-transition">New Page Link3</button></a></div>
+<button class = "button-transition">Adventure Game Page</button></a></div>
     <div class="grid-item"><a href = "test4.html" style = “color:black”; target = “_blank”;>
 <button class = "button-transition">New Page Link4</button></a></div>
     <div class="grid-item"><a href = "test5.html" style = “color:black”; target = “_blank”;>
