--- a/test3.html
+++ b/test3.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>HTML Tutorial</title>
+	<title>Adventure Page</title>
 <style>
 	.game-container {
     width: 600px;
@@ -16,7 +16,7 @@
 
 .game-text {
     white-space: pre-line; /* preserves line breaks */
-    height: 120px;
+    height: 220px;
     overflow-y: auto;
     margin-bottom: 10px;
 }
@@ -37,150 +37,12 @@
     font-size: 16px;
     cursor: pointer;
 }
-
-</style>
-</head>
-<body style= background-color:LightSkyBlue>
-
-
-<h1 style="color:blue; font-family:arial; text-align:left;" title="This area is the title for the webpage";>The Bridge to Technology Graduates' Page &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; <a style= "font-size:65%"; title="Click this to email Chuck" href="mailto:Chuck.Zavos@gwmek.org">Chuck.Zavos@gwmek.org</a></h1>
-<hr>
-<table>
-  <tr>
-    <th style="font-family:courier; text-align:left; font-size:150%;">
-<pre>
-Welcome to the <i>Goodwill Bridge to Technology</i> 
-page dedicated to all of the graduates of the 
-program.  If you are a graduate of the program, 
-we hope that you will use this to connect with 
-previous classmates, network with other students, 
-and enjoy the posted images and videos.</pre></th>
-    <th><img src="/C:/Users/czavos/Graduation.jpg" alt="Name it here" width="245" height="228"></th>
-    <th><img src="/C:/Users/czavos/Graduation2.png" alt="Name it here" width="245" height="228"></th>
-    <th><img src="/C:/Users/czavos/Graduation3.jpg" alt="Name it here" width="245" height="228"></th>
-    <th><img src="/C:/Users/czavos/Graduation4.png" alt="Name it here" width="245" height="228"></th>
-<tr>
-    <td></td>
-    <td><img src="/C:/Users/czavos/Graduation4.png" alt="Name it here" width="245" height="228"></td>
-    <td><img src="/C:/Users/czavos/Graduation4.png" alt="Name it here" width="245" height="228"></td>
-    <td><img src="/C:/Users/czavos/Graduation4.png" alt="Name it here" width="245" height="228"></td>
-    <td><img src="/C:/Users/czavos/Graduation4.png" alt="Name it here" width="245" height="228"></td>
-</tr>
-  </tr>
-</table>
-
-<table>
-  <tr>
-<th style= "color:red; font-family:veranda; font-size:160%; text-align:left";>&emsp; &emsp; &emsp; Description</th>
-<th>&emsp; &emsp; &emsp; </th>
-</tr>
-<tr>
-<td>
-<div style="background-color:black;color:white;padding:20px;">
-<pre style="font-family:courier; text-align:left; font-size:100%;">
-&emsp; &emsp; &emsp; The Bridge to Technology program is designed to prepare adult learners 
-&emsp; &emsp; &emsp; for an advanced career pathway of their choice within the technology field 
-&emsp; &emsp; &emsp; and other identified future state industries including Robotics, AI/Computer 
-&emsp; &emsp; &emsp; Vision Machine Learning, AR/VR (Artificial Reality/Virtual Reality), 3D Printing, 
-&emsp; &emsp; &emsp; Cybersecurity, and IoT (Internet of Things) and more. Learners will participate 
-&emsp; &emsp; &emsp; in the program over a period of 4 weeks through a combination of online and 
-&emsp; &emsp; &emsp; in-person instruction. Learners will attend the Bridge to Technology program at 
-&emsp; &emsp; &emsp; our AI Learning Lab located in Kansas City, MO. Each learner will attend class 
-&emsp; &emsp; &emsp; with our Goodwill Adult Education Instructor and will also work with a Workforce 
-&emsp; &emsp; &emsp; Development Specialist will work with each learner to implement a Career Development 
-&emsp; &emsp; &emsp; Plan and overcome barriers such as transportation, childcare, etc.
-
-                                                                                       
-                                                                                       </pre>
-</td>
-<td>
-&emsp; &emsp; &emsp; <video width="400" height="320" controls>
-  <source src="/C:/Users/czavos/B2T_Capstones.mp4">
-Your browser does not support the video tag.
-</video>
-
-</td>
-</tr>
-<tr>
-<td style= "color:red; font-family:veranda; font-size:160%; text-align:left";>&emsp; &emsp; &emsp; <b>Requirements</b></th>
-<th>&emsp; &emsp; &emsp; </th>
-</td>
-</tr>
-<tr>
-<td>
-<div style="background-color:black;color:white;padding:20px;">
-<pre style="font-family:courier; text-align:left; font-size:100%;">
-&emsp; &emsp; &emsp; Candidates should be 18 and over with at least a high school diploma
-&emsp; &emsp; &emsp; or equivalency or enrolled at an accredited adult learning program. 
-&emsp; &emsp; &emsp; Candidates should be interested in advancing their computer, academic, 
-&emsp; &emsp; &emsp; or other workforce readiness skills to pursue a career in the tech 
-&emsp; &emsp; &emsp; industry.
-</pre>
-</td>
-</tr>
-<br>
-<tr>
-<td style= "color:red; font-family:veranda; font-size:150%; text-align:left";>&emsp; &emsp; &emsp; <b>2023 Class Offerings</b></th>
-</tr>
-<tr>
-<td>
-<div style="background-color:black;color:white;padding:20px;">
-<pre style="font-family:courier; text-align:left; font-size:100%;">
-&emsp; &emsp; &emsp; 1/30/23-2/24/23
-&emsp; &emsp; &emsp; 3/27/23-4/21/23
-&emsp; &emsp; &emsp; 5/30/23-6/23/23
-&emsp; &emsp; &emsp; 7/24/23-8/18/23
-&emsp; &emsp; &emsp; 9/18/23-10/13/23
-&emsp; &emsp; &emsp; 11/13/23-12/13/23
-</pre>
-</td>
-</tr>
-
-
-<tr>
-<td style= "color:red; font-family:veranda; font-size:150%; text-align:left";>&emsp; &emsp; &emsp; <b>2023 Class Schedule</b></th>
-</tr>
-<tr>
-<td>
-<div style="background-color:black;color:white;padding:20px;">
-<pre style="font-family:courier; text-align:left; font-size:100%;">
-&emsp; &emsp; &emsp; Classes are held Monday through Friday from 9:00am to 12:00 pm at our 
-&emsp; &emsp; &emsp; Goodwill AI Learning Lab located at 800 E. 18th St. Kansas City, MO 64108.
-
-
-</pre>
-</td>
-<td>
-&emsp; &emsp; &emsp; <video width="400" height="320" controls>
-  <source src="https://goodwillartemisinstitute.s3.us-east-2.amazonaws.com/website-videos/B2T+cohort+5+Graduation.mp4">
-Your browser does not support the video tag.
-</video>
-
-</td>
-</tr>
-</table>
-<hr>
-<br>
-
-<br>
-
-<style>
-.container {
-  column-count: 3;
-  column-rule-width: 15px;
-  column-rule-style: solid;
-  column-rule-color: rebeccapurple;
+body {
+	background-color:LightSkyBlue
 }
 </style>
 </head>
 <body>
-
-<h1>Specify the Gap Between Columns</h1>
-
-<div class="container">
-I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. I am writing a few words that will go into 3 columns. 
-</div>
-<hr>
     <h1>Welcome to the Adventure Game</h1>
 	<hr>
     <div class="game-container">
@@ -193,6 +55,5 @@ I am writing a few words that will go into 3 columns. I am writing a few words t
 <script src="game.js"></script>
 	<br>
 	<hr>
-
 </body>
 </html>
