--- a/test3.html
+++ b/test3.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 <head>
 	<title>Adventure Page</title>
@@ -19,6 +18,7 @@
     height: 220px;
     overflow-y: auto;
     margin-bottom: 10px;
+	font-family: Arial
 }
 
 .game-input {
@@ -43,6 +43,7 @@ body {
 </style>
 </head>
 <body>
+	<center>
     <h1>Welcome to the Adventure Game</h1>
 	<hr>
     <div class="game-container">
@@ -55,5 +56,6 @@ body {
 <script src="game.js"></script>
 	<br>
 	<hr>
+		</center>
 </body>
 </html>
