--- a/test3.html
+++ b/test3.html
@@ -18,7 +18,7 @@
     height: 220px;
     overflow-y: auto;
     margin-bottom: 10px;
-	font-family: Arial
+	font-family: Arial;
 }
 
 .game-input {
