--- a/test3.html
+++ b/test3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Adventure Page</title>
+	<title>Adventure Game Page</title>
 <style>
 	.game-container {
     width: 600px;
@@ -11,6 +11,8 @@
     padding: 15px;
     font-family: monospace;
     overflow-y: auto;
+	font-family: Times;
+	font-size: 18px
 }
 
 .game-text {
@@ -18,7 +20,7 @@
     height: 220px;
     overflow-y: auto;
     margin-bottom: 10px;
-	font-family: Arial;
+
 }
 
 .game-input {
